whitespace fix

--- a/css/reporting.css
+++ b/css/reporting.css
@@ -187,7 +187,7 @@
 /* custom reporting classes */
 
 .reporting-search-criteria-container {
-    padding: 5px 0px 5px 20px;
+    padding: 5px 20px 5px 20px;
     border-top: 1px solid #ccc; 
 }
 
